fix(tooltip): use row titles as label values, fix margins on mobile

--- a/src/js/components/molecules/tab-table-row/tab-table-row.scss
+++ b/src/js/components/molecules/tab-table-row/tab-table-row.scss
@@ -28,7 +28,11 @@
     }
 
     &__tooltip-label {
-        margin-top: ($buildingUnit * -1.5);
+        margin-top: $buildingUnit * -1;
+
+        @include min-tablet() {
+            margin-top: $buildingUnit * -1.5;
+        }
     }
 
     &__value {
